# bookbridge

./: .gitignore  404.html  BRANCH_STATUS.md  CHANGELOG.md  LICENSE  QUICKSTART.md  README.md  RELEASE_NOTES.md  docker-compose.example.yml  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  sitemap.xml  start.sh
changelog/: index.html
configuration/: index.html
diagnostics/: index.html
diagnostics_receiver/: Dockerfile  app.py  compose.yaml
docs/: changelog.md  configuration.md  diagnostics.md  getting-started.md  index.md  troubleshooting.md  user-guide.md
getting-started/: index.html
plugins/: README.md
reports_site/: .dockerignore  Dockerfile  README.md  app.py  compose.yaml
scripts/: migrate_grimmory_to_bookorbit.py  package_koreader_plugins.py
search/: search_index.json
src/: sync_manager.py  version.py  web_server.py
templates/: _match_queue_panel.html  _nav.html  account.html  account_integrations.html  add_book.html  admin_user_integrations.html  admin_users.html  base.html  batch_match.html  forge.html  index.html  login.html  logs.html  match.html  my_reports.html  settings.html  setup.html  shelfmark.html  stats.html  suggestions.html
tests/: conftest.py  run_all_tests.py  test_abs_disabled_sentinel.py  test_abs_ebook_sync_client.py  test_abs_socket_listener.py  test_abs_socket_manager.py  test_alignment_service.py  test_annotation_hub.py  test_bookfusion_integration.py  test_bookfusion_upload.py  test_booklore_client.py  test_booklore_shelf_helpers.py  test_booklore_sync_client_state.py  test_bookorbit_client.py  test_bookorbit_match_hash.py  test_bookorbit_multiuser_ownership.py  test_bookorbit_shelf_watch.py  test_bookorbit_sync_client.py  test_bridgesync_lua.py  test_calibre_identifier_resolver.py  test_canonical_position_service.py  test_client_poller_multiuser.py  test_client_poller_self_write.py  test_credential_encryption.py  test_cross_format_normalization_locator_priority.py  test_crossformat_payload_contracts.py  test_cwa_sync_api.py  test_cwa_sync_client.py  test_dependency_injection.py  (+71 more)
(+102 files in other folders)
